<resources>
  <string name="app_name">SRnO工具类</string>
  <string name="btn_cancel">取消</string>
  <string name="btn_ok">确认</string>
  <string name="btn_confirm">确认</string>
  <string name="prompt_input_password">请输入密码</string>
  <!-- 软键盘 -->
  <string name="keyboard_00">00</string>
  <string name="keyboard_0">0</string>
  <string name="keyboard_1">1</string>
  <string name="keyboard_2">2</string>
  <string name="keyboard_3">3</string>
  <string name="keyboard_4">4</string>
  <string name="keyboard_5">5</string>
  <string name="keyboard_6">6</string>
  <string name="keyboard_7">7</string>
  <string name="keyboard_8">8</string>
  <string name="keyboard_9">9</string>
  <string name="keyboard_point">.</string>
    <string name="keyboard_del">删除</string>
  <string name="keyboard_clear">清空</string>
    <string name="keyboard_cardpay">银行卡支付</string>
  <string name="keyboard_scanpay">扫码支付</string>
</resources>
