<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_num_keyboard" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="188dip"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:orientation="vertical"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:id="@+id/textview_amount_consume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dip"
                android:gravity="center_vertical"
                android:text="消费金额"
                android:textColor="@color/text_default_light"
                android:textSize="40sp" />

            <RelativeLayout
                android:layout_width="330dip"
                android:layout_height="@dimen/height_amount_edit"
                android:layout_marginTop="26dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textview_amount_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="￥"
                    android:textColor="#000000"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/textview_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/textview_amount_sign"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="50sp" />

                <ImageButton
                    android:id="@+id/btn_eliminate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:background="#F5F6FA"
                    android:gravity="center"
                    android:src="@drawable/icon_eliminate" />
            </RelativeLayout>


            <TextView
                android:id="@+id/textview_ecload_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="140dp"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="#ff333333"
                android:textSize="17sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/div_line_color"
                    android:paddingTop="0.5dp" >

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_1"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:layout_marginLeft="0.5dp"
                        android:layout_marginRight="0.5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_2"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_3"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/div_line_color"
                    android:paddingTop="0.5dp" >

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_4"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:layout_marginLeft="0.5dp"
                        android:layout_marginRight="0.5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_5"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_6"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/div_line_color"
                    android:paddingTop="0.5dp" >

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_7"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:layout_marginLeft="0.5dp"
                        android:layout_marginRight="0.5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_8"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_9"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/div_line_color"
                    android:paddingTop="0.5dp" >

                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_0"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn_point"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:layout_marginLeft="0.5dp"
                        android:layout_marginRight="0.5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_point"
                        android:textColor="@color/text_default_light"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn00"
                        android:layout_width="@dimen/btn_num_width"
                        android:layout_height="@dimen/btn_num_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/keyboard_00"
                        android:textColor="@color/promotion_text_color"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/div_line_color"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/btnDel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_num_height"
                    android:layout_marginLeft="0.5dp"
                    android:layout_marginTop="0.5dip"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dip"
                        android:background="@color/white"
                        android:clickable="false"
                        android:duplicateParentState="true"
                        android:src="@drawable/icon_keyboard_return" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dip"
                        android:clickable="false"
                        android:duplicateParentState="true"
                        android:gravity="center"
                        android:text="@string/keyboard_del"
                        android:textColor="@color/text_default_light"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_clear"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_num_height"
                    android:layout_marginBottom="0.5dip"
                    android:layout_marginLeft="0.5dp"
                    android:layout_marginTop="0.5dip"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dip"
                        android:background="@color/white"
                        android:clickable="false"
                        android:duplicateParentState="true"
                        android:src="@drawable/icon_clear" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dip"
                        android:clickable="false"
                        android:duplicateParentState="true"
                        android:gravity="center"
                        android:text="@string/keyboard_clear"
                        android:textColor="@color/text_default_light"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/btn_scan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/orange"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone" >

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dip"
                            android:background="@color/orange"
                            android:clickable="false"
                            android:duplicateParentState="true"
                            android:src="@drawable/icon_keyboard_scan" />

                        <TextView
                            android:id="@+id/text_scanpay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:duplicateParentState="true"
                            android:gravity="center"
                            android:text="@string/keyboard_scanpay"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/button_ok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/text_primary"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/text_primary"
                            android:clickable="false"
                            android:duplicateParentState="true"
                            android:src="@drawable/icon_keyboard_card" />

                        <TextView
                            android:id="@+id/text_cardpay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:duplicateParentState="true"
                            android:gravity="center"
                            android:text="@string/keyboard_cardpay"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="快速预授权"
            android:textColor="@color/text_primary"
            android:textSize="17sp"
            android:visibility="gone" />
    </RelativeLayout>

</FrameLayout>